# modern-software-dev-assignments

./: .gitignore  app-1.py  app-2.py  app-3.py  app-4.py
instance/: tasks.db
week1/: README.md  chain_of_thought.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: README.md  writeup.md
week2/app/: config.py  db.py  errors.py  main.py  schemas.py
week2/app/routers/: action_items.py  notes.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: test_extract.py
week3/: README.md
week3/server/: main.py  pyproject.toml
week4/: Makefile  README.md  writeup.md
week4/.claude/commands/: add-feature.md  docs-sync.md  verify-change.md
week4/backend/app/: schemas.py
week4/backend/tests/: conftest.py  test_action_items.py  test_notes.py
week4/docs/: API.md
week4/frontend/: app.js  index.html  styles.css
week5/: Makefile  multi-agent-coordination-playbook.md  task-implementation-assistant.md  writeup.md
week5/backend/app/: models.py  schemas.py
week5/backend/tests/: conftest.py  test_action_items.py  test_notes.py
week5/frontend/: app.js  index.html  styles.css
week6/: README.md  requirements.txt  writeup.md
week6/backend/app/: main.py
week8/: README.md  writeup.md
week8/bolt_react_notes/: README.md  index.html  package-lock.json
week8/bolt_react_notes/src/: App.tsx  NoteCard.tsx  NoteForm.tsx  NoteList.tsx  index.css  useNotes.ts
week8/flask-sqlite-notes/: README.md  app.py
week8/nextjs-json-notes/: README.md  package-lock.json  package.json
(+15 files in other folders)
