[tool.poetry]
name = "week3-weather-mcp-server"
version = "0.1.0"
description = "A local STDIO MCP server that provides current weather and forecast tools."
authors = ["Your Name <you@example.com>"]
readme = "../README.md"
package-mode = false
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mcp = { extras = ["cli"], version = ">=1.9.0" }
httpx = ">=0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.6.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
